# TinyLog

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README_zh.md  build.sh  tinylog.pc.in
include/tinylog/: log_config.h  log_level.h  log_manager.h  logger.h  logger_types.h
include/tinylog/internal/: log_utils.h  sink_interface.h
src/: log_config.cc  log_level.cc  log_manager.cc  logger.cc  utils.h
src/internal/: log_utils.cc  sink_interface.cc
src/sink/: console_sink.cc  console_sink.h  file_sink.cc  file_sink.h  sink_interface.cc  sink_interface.h
test/: comprehensive_test.cc  module_log_test.cc  test.cc
